...

        <LinearLayout  android:id="@+id/appwidget_location_mode_layout"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="16dp" android:paddingLeft="16dp" android:paddingTop="@dimen/settingsGroup_padding">

            <TextView android:labelFor="@+id/appwidget_location_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/location_label_mode" android:textSize="?attr/text_size_small"
                android:layout_gravity="center_vertical" />

            <Spinner android:id="@+id/appwidget_location_mode" android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <com.forrestguice.support.widget.ImageButton android:id="@+id/appwidget_location_list"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:src="?attr/icActionPlace"
                    android:contentDescription="@string/places_action_selectPlace" />

                <com.forrestguice.support.widget.ImageButton android:id="@+id/appwidget_location_cancel"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:src="?attr/icActionBack"
                    android:contentDescription="@string/dialog_cancel" />

            </LinearLayout>

...
                <ViewFlipper android:id="@+id/view_flip"
                             android:layout_width="fill_parent" android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:paddingLeft="0dp" android:paddingStart="0dp"
                             android:paddingRight="16dp" android:paddingEnd="16dp" >

                    <EditText android:id="@+id/appwidget_location_name"
                              android:layout_width="fill_parent" android:layout_height="wrap_content"
                              android:textAppearance="?android:attr/textAppearanceSmall"
                              android:hint="@string/location_hint_name" android:enabled="false" android:inputType="text"
                              android:paddingLeft="5dp" android:paddingRight="5dp"
                        android:layout_gravity="center_vertical" />

                    <Spinner android:id="@+id/appwidget_location_nameSelect"
                             android:layout_width="fill_parent" android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical" android:dropDownVerticalOffset="24sp" />

                </ViewFlipper>

            </LinearLayout>
...
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">

                <FrameLayout android:id="@+id/appwidget_location_auto_layout"
                    android:layout_width="fill_parent" android:layout_height="fill_parent">

                    <com.forrestguice.support.widget.ImageButton android:id="@+id/appwidget_location_auto"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:src="?attr/icActionGPS"
                        android:contentDescription="@string/action_getLocation" />

                    <ProgressBar
                        android:id="@+id/appwidget_location_auto_progress"
...

                <com.forrestguice.support.widget.ImageButton android:id="@+id/appwidget_location_add"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:src="?attr/icActionNew"
                    android:contentDescription="@string/places_action_addPlace" />

                <com.forrestguice.support.widget.ImageButton android:id="@+id/appwidget_location_edit"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:src="?attr/icActionEdit"
                    android:contentDescription="@string/places_action_editPlace" />

                <com.forrestguice.support.widget.ImageButton android:id="@+id/appwidget_location_save"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:src="?attr/icActionSave"
                    android:contentDescription="@string/places_action_savePlace" />

            </LinearLayout>

...
                    android:id="@+id/appwidget_location_latlon"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:orientation="horizontal">

                        <TextView android:labelFor="@+id/appwidget_location_lat"
                                  android:id="@+id/appwidget_location_lat_label"
                                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:layout_gravity="end|center_vertical"
                                  android:textSize="?attr/text_size_small" android:text="@string/location_label_lat" android:enabled="false" />

                        <EditText android:id="@+id/appwidget_location_lat"
...
                                  android:hint="@string/location_hint_lat" android:enabled="false" />
                    </LinearLayout>

                    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:orientation="horizontal">

                        <TextView android:labelFor="@+id/appwidget_location_lon"
                                  android:id="@+id/appwidget_location_lon_label"
                                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:layout_gravity="end|center_vertical"
                                  android:textSize="?attr/text_size_small" android:text="@string/location_label_lon" android:enabled="false" />

                        <EditText android:id="@+id/appwidget_location_lon"
...
                        android:layout_width="fill_parent" android:layout_height="fill_parent">

                        <LinearLayout
                            android:layout_width="fill_parent" android:layout_height="fill_parent"
                            android:gravity="center" android:orientation="vertical">

                            <com.forrestguice.support.widget.ImageButton android:id="@+id/appwidget_location_getfix"
                                android:layout_width="wrap_content" android:layout_height="wrap_content"
                                android:src="?attr/icActionGPS_searching"
                                android:layout_gravity="center"
                                android:contentDescription="@string/action_getLocation" />

                            <com.forrestguice.support.widget.ImageButton android:id="@+id/appwidget_location_mapview"
...
